--- a/package.json
+++ b/package.json
@@ -44,5 +44,5 @@
   "devDependencies": {
     "gh-pages": "^3.2.3"
   },
-  "homepage": "http://abubakarMana01.github.io/the-tesla-clone"
+  "homepage": "http://jvfvr00.github.io/tesla-clone"
 }
